<resources>
    <string name="app_name">PiOpener</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="empty_server_menu">No Servers</string>
    <string name="drawable_description">Garage Status</string>

    <string name="server_name_label">Connection name:</string>
    <string name="server_address_label">Server address:</string>
    <string name="server_apikey_label">API Key:</string>
    <string name="server_port_label">Port:</string>
    <string name="server_port_hint">Default: 4444</string>
    <string name="server_cert_label">Cert Location:</string>

    <string name="server_menu_title">Servers</string>
    <string name="discover_servers_progress_text">Searching for servers…</string>
    <string name="discover_servers_empty">No servers found</string>
    <string name="manual_add_button">Manual Entry</string>
    <string name="add_server">Add Server</string>
    <string name="optional">Optional</string>
    <string name="cert_hint">For Self-Signed Certs</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete_btn">X</string>
    <string name="edit">Edit Server</string>
    <string name="delete">Delete</string>

    <string name="advanced">Advanced</string>
    <string name="basic">Basic</string>
    <string name="notifications">Notifications:</string>
    <string name="disabled">0</string>
    <string name="notification_summary">
        Receive notifications from this server on state changes.
    </string>
    <string name="timer_summary">
        Receive notifications every X minutes while this node is not CLOSED
    </string>
    <string name="opening_notifications">OPENING</string>
    <string name="open_notifications">OPEN</string>
    <string name="closing_notifications">CLOSING</string>
    <string name="closed_notifications">CLOSED</string>
    <string name="proceed">proceed</string>
</resources>
